[project]
name = "brahmagupta"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bswck", email = "bartoszpiotrslawecki@gmail.com" }
]
dependencies = [
    "slothy>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "ruff>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["brahmagupta"]
